<resources>
    <string name="app_name">VMSAlpha</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sensors_list">SensorsListActivity</string>


    <string name="Go">New Campaign</string>
    <string name="ShowValuesButton">Show Values</string>
    <string name="title_activity_activity_sensors_values">activity_sensors_values</string>
    <string name="title_activity_sensors_values">Sensors Values</string>
    <string name="test_button">Start the test</string>
    <string name="CampaignName">Name of the campaign</string>
    <string name="startRegistering">Start measuring</string>
    <string name="stopRegistering">Stop measuring</string>
    <string name="returnList">Return to the list of sensors</string>
    <string name="saveCampaign">Set Name</string>
    <string name="Historic">Historic</string>
    <string name="measures">Measures</string>
    <string name="sensors">Sensors selected</string>
</resources>
